--- a/specialPages/combine/style.css
+++ b/specialPages/combine/style.css
@@ -23,7 +23,7 @@ section {
 .main-nav {
   position: fixed;
   width: 100%;
-  height: 100px;
+  height: 165px;
   top: 0;
   border-bottom: 1px solid #ccc;
   display: flex;
@@ -36,23 +36,14 @@ section {
   opacity: 0.5;
 }
 
-.up {
-  transform: translateY(-40px);
-}
-
-.small-nav {
-  height: 40px;
-}
-
 .brand-title {
   font-size: 7vw;
   font-weight: 100;
   margin: 0.5rem;
   font-family: 'Freestyle Script';
   padding-left: 2 rem;
-
-
   font-style: normal;
+  transition: font-size 500ms ease-in-out;
 }
 
 .navbar-tabs ul {
@@ -77,6 +68,23 @@ section {
   background-color: aquamarine;
 }
 
+/*
+small navbar
+*/
+.small-nav {
+  height: 55px;
+}
+
+.small-brand-title {
+  font-size: 3vh;
+}
+
+/* close navbar  */
+.up {
+  transform: translateY(-55px);
+}
+
+/* Hamburger Stuff */
 .hamburger-button {
   position: absolute;
   top: 0.75rem;
@@ -224,18 +232,11 @@ section {
 
 /* background */
 
-#d1 {
-  background: url(featue-bg.jpg) no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: 100% 100%;
-}
-
 #d0 {
   background: url(./img/leaf.jpg) no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 
 #d1 {
@@ -243,7 +244,8 @@ section {
   background: url(./img/sasuke.jpg) no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: 100% 100%;
+  background-size: cover;
+  background-clip: content-box;
   opacity: 0.5;
 }
 
@@ -251,7 +253,8 @@ section {
   background: url(./img/grass.jpg) no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: 100% 100%;
+  background-size: cover;
+  background-clip: content-box;
 }
 
 #d3 {
